tests/builtins/errors/is_type_no_args.orus
fn main() { 
    print(is_type()) 
}
